@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2020 Contributors to the openHAB project
+ * Copyright (c) 2010-2021 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -18,7 +18,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.util.concurrent.atomic.AtomicReference;
 
-import org.apache.commons.io.IOUtils;
+import org.eclipse.jdt.annotation.NonNullByDefault;
 import org.openhab.binding.dsmr.internal.device.p1telegram.P1Telegram;
 import org.openhab.binding.dsmr.internal.device.p1telegram.P1Telegram.TelegramState;
 import org.openhab.binding.dsmr.internal.device.p1telegram.P1TelegramParser;
@@ -28,6 +28,7 @@ import org.openhab.binding.dsmr.internal.device.p1telegram.P1TelegramParser;
  *
  * @author Hilbrand Bouwkamp - Initial contribution
  */
+@NonNullByDefault
 public final class TelegramReaderUtil {
     private static final String TELEGRAM_EXT = ".telegram";
 
@@ -43,7 +44,10 @@ public final class TelegramReaderUtil {
      */
     public static byte[] readRawTelegram(String telegramName) {
         try (InputStream is = TelegramReaderUtil.class.getResourceAsStream(telegramName + TELEGRAM_EXT)) {
-            return IOUtils.toByteArray(is);
+            if (is == null) {
+                fail("Could not find telegram file with name:" + telegramName + TELEGRAM_EXT);
+            }
+            return is.readAllBytes();
         } catch (IOException e) {
             throw new AssertionError("IOException reading telegram data: ", e);
         }
